--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.napier.sem</groupId>
-    <artifactId>setMethods</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>devops</artifactId>
+    <version>0.1.0.1</version>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
