--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/setup-java@v3
         with:
           java-version: '17'
-          distribution: 'corretto amazon'
+          distribution: 'corretto'
       - name: Build with Maven
         run: mvn package
       - name: Run docker compose
