--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,13 +10,23 @@ jobs:
         uses: actions/checkout@v4
         with:
           submodules: recursive
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
+
+      - name: Set up JDK 17 (Amazon Corretto)
+        uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'corretto'
+
+      - name: Cache Maven packages
+        uses: actions/cache@v3
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-maven-
+
       - name: Build with Maven
-        run: mvn package
+        run: mvn -B package --file pom.xml
+
       - name: Run docker compose
         run: docker compose up --abort-on-container-exit
-
