--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,15 @@
-version: '3'
+version: '3.8'
 services:
-  # Application Dockerfile is in same folder which is .
   app:
     build: .
+    depends_on:
+      - db
 
-  # db is is db folder
   db:
-    build: db/.
+    image: mysql:8.0
     restart: always
+    environment:
+      MYSQL_ROOT_PASSWORD: example
+      MYSQL_DATABASE: employees
     ports:
-      - "33060:3306"
+      - "3306:3306"
