Testing disconnect function between App
Signed-off-by: Ruta Minkstimaite <30101934@nescol.ac.uk>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,3 +13,5 @@ services:
       MYSQL_DATABASE: employees
     ports:
       - "3306:3306"
+    volumes:
+      - ./test_db:/docker-entrypoint-initdb.d
