--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,12 @@
-version: '3.8'
+version: '3'
 services:
+  # Application Dockerfile is in same folder which is .
   app:
     build: .
-    depends_on:
-      - db
 
+  # db is is db folder
   db:
-    image: mysql:8.0
+    build: db/.
     restart: always
-    environment:
-      MYSQL_ROOT_PASSWORD: example
-      MYSQL_DATABASE: employees
     ports:
-      - "3306:3306"
-    volumes:
-      - ./test_db:/docker-entrypoint-initdb.d
+      - "33060:3306"
