--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           java-version: '17'
           distribution: 'adopt'
-
+      #Changed
       - name: Build JAR with Maven
         run: mvn -B package --file pom.xml
 
