--- a/db/Dockerfile
+++ b/db/Dockerfile
@@ -1,15 +1,8 @@
-# Use the latest MySQL image
+# Use the official MySQL image
 FROM mysql/mysql-server:latest
-# Set the working directory
-WORKDIR /tmp
-# Copy all the files to the working directory of the container
-COPY test_db/*.sql /tmp/
-COPY test_db/*.dump /tmp/
-# Copy the main SQL file to docker-entrypoint-initdb.d.
-# Scripts and SQL files in this folder are executed on container startup.
-# This is specific to MySQL.
-COPY test_db/employees.sql /docker-entrypoint-initdb.d
-COPY test_db/init-user.sql /docker-entrypoint-initdb.d/
+
+# Copy everything in the test_db folder into MySQL's init folder
+COPY test_db/ /docker-entrypoint-initdb.d/
+
 # Set the root password
 ENV MYSQL_ROOT_PASSWORD example
-
