--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,21 +8,15 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-
+        with:
+          submodules: recursive
       - name: Set up JDK 17
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'adopt'
-      #Changed
-      - name: Build JAR with Maven
-        run: mvn -B package --file pom.xml
+      - name: Build with Maven
+        run: mvn package
+      - name: Run docker compose
+        run: docker compose up --abort-on-container-exit
 
-      - name: Build Docker Image
-        run: docker build -t devopsimage .
-
-      - name: Run image
-        run: docker run --name devopscontainer -d devopsimage
-
-      - name: View logs
-        run: docker logs devopscontainer
