--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,7 @@ version: '3.8'
 
 services:
   db:
-    build:
-      context: .          # 👈 use the whole setMethods folder as context
-      dockerfile: db/Dockerfile
+    build: ./db
     container_name: db
     environment:
       MYSQL_ROOT_PASSWORD: example
@@ -13,8 +11,7 @@ services:
       - "3306:3306"
 
   app:
-    build:
-      context: .          # app Dockerfile already in root, fine
+    build: .
     container_name: app
     depends_on:
       - db
